--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,17 +15,19 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "@repo/ui": "*"
+    "@repo/ui": "*",
+    "date-fns": "^3.6.0",
+    "iconify-icon": "^2.0.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
+    "@repo/eslint-config": "*",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.2",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
-    "@repo/eslint-config": "*",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "svelte": "^4.2.12",
