--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@tailwindcss/typography": "^0.5.12",
     "date-fns": "^3.6.0",
     "iconify-icon": "^2.0.0"
   },
@@ -27,11 +28,15 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.9.0",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.2",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.6",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
