--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "iconify-icon": "^2.0.0"
   },
   "devDependencies": {
+    "@iconify/svelte": "^3.1.6",
     "@playwright/test": "^1.42.1",
     "@repo/eslint-config": "*",
     "@sveltejs/adapter-auto": "^3.1.1",
