--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.1",
     "@repo/ui": "*",
     "@tailwindcss/typography": "^0.5.12",
     "date-fns": "^3.6.0",
