--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@formkit/auto-animate": "^0.8.1",
     "@repo/ui": "*",
     "@tailwindcss/typography": "^0.5.12",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "iconify-icon": "^2.0.0"
   },
