--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,9 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon ./src/server.ts"
+    "dev": "nodemon ./src/server.ts",
+    "prisma-migrate": "npx prisma migrate",
+    "prisma-studio": "npx prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,6 +23,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "nodemon": "^3.1.0",
+    "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   }
