--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "@iconify/svelte": "^3.1.6",
     "@playwright/test": "^1.42.1",
     "@repo/eslint-config": "*",
+    "@repo/lib": "*",
     "@sveltejs/adapter-auto": "^3.1.1",
     "@sveltejs/kit": "^2.5.2",
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
