--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.8.1",
     "@repo/ui": "*",
+    "@sveltejs/adapter-node": "^5.0.1",
     "@tailwindcss/typography": "^0.5.12",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "iconify-icon": "^2.0.0"
+    "iconify-icon": "^2.0.0",
+    "lucia": "^3.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify/svelte": "^3.1.6",
