--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^3.6.0",
     "iconify-icon": "^2.0.0",
     "lucia": "^3.1.1",
+    "svelte-french-toast": "^1.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
