--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -44,6 +44,7 @@
     "prettier-plugin-svelte": "^3.2.2",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.6",
+    "svelte-dnd-action": "^0.9.42",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
